--- a/docassemble/A2JauthorProtectiveOrderTemplate/data/questions/a2jauthor_protective_order_template.yml
+++ b/docassemble/A2JauthorProtectiveOrderTemplate/data/questions/a2jauthor_protective_order_template.yml
@@ -1140,7 +1140,8 @@ subquestion: |
   
 
   ${ al_user_bundle.send_button_html(show_editable_checkbox=True) }
-
+buttons:
+  - Start over: restart
 progress: 100
 ---
 objects:
